--- a/frontend/src/components/Home/homePage.css
+++ b/frontend/src/components/Home/homePage.css
@@ -109,7 +109,7 @@ text-decoration: underline;
  
 
 /* Tablet */
- @media screen and ( min-width: 768px ) and ( max-width: 1023 ) {
+ @media screen and ( min-width: 768px ) and ( max-width: 1023px ) {
      
      .homepage{
 
